# Backend_Editor

./: .gitignore  Cargo.toml  README.md
logs/: myapp.log.2025-05-28
src/: main.rs
src/models/: file.rs  mod.rs  project.rs  room_wrapper.rs  user.rs
src/services/: auth.rs  crdt_ops.rs  db.rs  mod.rs  project.rs  redis.rs  socket.rs
src/services/auth/: fetch_gprofile.rs  github_callback.rs  github_login.rs  mod.rs  models.rs  outh_client.rs
src/services/brotili/: compress.rs  decompress.rs
src/services/crdt_ops/: file_open_ops.rs  initialize_room.rs  mod.rs  models.rs
src/services/db/: connect_db.rs  create_db_entry.rs  mod.rs
src/services/project_services/: create_project.rs  fetch_template.rs  mod.rs  models.rs  read_template_from_disk.rs
src/services/redis/: crdt_snapshot_to_redis.rs  mod.rs
src/services/socket/: file_socket.rs  folder_socket.rs  mod.rs  model.rs
templates/react-template/: package-lock.json
