[package]
name = "fullstack-code-editor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
redis = { version = "0.31.0", features = ["connection-manager", "tokio-comp"] }
flate2 = "1.0.30"                                                               # For compression
bollard = "0.13.0"                                                              # For Docker integration
base64 = "0.22.1"
oauth2 = "4.4.2"                                                                # For GitHub OAuth
tower-http = { version = "0.6.4", features = ["cors"] }                         # For CORS
serde_json = "1.0.117"
anyhow = "1.0.86"                                                               # For error handling
futures = "0.3.31"
dotenv = "0.15.0"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
